--- a/3_GitHub.Rmd
+++ b/3_GitHub.Rmd
@@ -1,6 +1,6 @@
 ---
-output:
-  html_document: default
+title: "1.3 Git and GitHub"
+output: html_document
 ---
 
 ```{r setup, include=FALSE}
@@ -120,6 +120,14 @@ In short:
 - Click `Generate Token`
 - Copy the personal access token that has been generated. You can email this to yourself, save it in a Word file on your computer, or put it anywhere that will be handy for your workflow. You will need to copy and paste this in the future to move your files onto GitHub!
 - Note that on your personal access token page on GitHub, you can revoke all tokens that you have generated if you are concerned that someone has gained access to your account.
+
+If you choose to generate a personal access token with an expiration date, you'll need to generate a new personal access token whenver your old token expires. When you have a new personal access token, you can set that token in RStudio using the library `gitcreds`. When you run the function `gitcreds_set()`, you will be given the option to replace your GitHub security credentials. Select this option (option 2) then paste in the new personal access token. All done!
+
+```r
+install.packages("gitcreds") # Only do this once
+library(gitcreds)
+gitcreds_set()
+```
 
 ***
 
