--- a/doc/Rmd_Example.Rmd
+++ b/doc/Rmd_Example.Rmd
@@ -41,11 +41,11 @@ My family's fave pizza toppings:
 
 ***
 
-My pet's in order of how much I like them:
+My kids in order of tallest to shortest:
 
-1. Nana (dog)
-2. Wheezer (cat)
-3. Napoleon (jerkface)
+1. Evee
+2. Hazel
+3. Nelly
 
 ***
 
