--- a/1_R_and_RStudio.Rmd
+++ b/1_R_and_RStudio.Rmd
@@ -15,24 +15,24 @@ print(), c(), typeof(), length(), seq(), rep(), matrix(), class(), array(), list
 
 ### Introduction to R and RStudio
 
-R is an open source programming language. That means that, if you choose, you can access the code behind every single function to see how the language is built. More importantly, R is free to download and use. Most importantly, and owing in part to the fact that R is free and open source, many many scientists have written R code (including functions and packages, which we will learn about later) so that R continues to become more powerful and more efficient every day. Do you have a tough problem to solve? Perhaps your scientific questions would be best answered by statistical models, mechanistic models, spatial analysis or machine learning. Perhaps you need to use numerical estimators to solve some nonlinear dynamics systems. Perhaps you want to make gorgeous figures or layered maps or interactive plots. Thanks to all of the hard work from R users that came before you, much of the code to do these things well and efficiently has already been written. The recent additions of the tidyverse and ggplot (you will learn more about these later) have made data science in R more powerful than ever before. Now you just need to learn how to take advantage of these tools.
+R is an **open source** programming language. That means that, if you choose, you can access the code behind every single function to see how the language is built. More importantly, R is free to download and use. Most importantly, and owing in part to the fact that R is free and open source, many many scientists have written R code (including functions and packages, which we will learn about later) so that R continues to become more powerful and more efficient every day. Do you have a tough problem to solve? Perhaps your scientific questions would be best answered by statistical models, mechanistic models, spatial analysis or machine learning. Perhaps you need to use numerical estimators to solve some nonlinear dynamics systems. Perhaps you want to make gorgeous figures or layered maps or interactive plots. Thanks to all of the hard work from R users that came before you, much of the code to do these things well and efficiently has already been written. The recent additions of the tidyverse and ggplot (you will learn more about these later) have made data science in R more powerful than ever before. Now you just need to learn how to take advantage of these tools.
 
 R is a dynamic programming language, which means R automatically interprets your code as you run it. This is different from other programming languages, such as C, Java, and FORTRAN, where you have to compile your human-readable code into machine-readable code (often 1s and 0s) before you can run it.
 
-Remember that R is the programming language we will learn in this course. However, when we write and run code we will usually do it through RStudio. RStudio is a free, open source R Integrated Development Environment (IDE). It provides a built in editor, works on all platforms (including on servers) and provides many advantages like integration with gitHub and software for writing dynamic notebooks such as RMarkdown files. You'll learn about this later. For now, just trust me that all the cool kids use RStudio. To get started, open RStudio just as you would open any other application on your computer. 
+Remember that R is the programming language we will learn in this course. However, when we write and run code we will usually do it through RStudio. **RStudio is a free, open source R Integrated Development Environment (IDE)**. It provides a built in editor, works on all platforms (including on servers) and provides many advantages like integration with gitHub and software for writing dynamic notebooks such as RMarkdown files. You'll learn about this later. For now, just trust me that all the cool kids use RStudio. To get started, open RStudio just as you would open any other application on your computer. 
 
 When you open RStudio, a window should appear in your screen like this:
 
 ![](doc/01-rstudio.png)
 
-The RStudio interface is simple. When you first open RStudio, there are three large panes. The left pane is the console, where you can directly type in the code you want to run. The output from your code is also printed directly into the console. The upper right pane shows the RStudio Environment, which lists all of the objects that are currently loaded. You can use the lower right pane to toggle between the `Files` and directories on your computer, to view `Plots` you have made and to use the `Help` features to search for documentation on many of the functionalities within R.
+The RStudio interface is simple. When you first open RStudio, there are three large panes. The left pane is the `console`, where you can directly type in the code you want to run. The output from your code is also printed directly into the console. The upper right pane shows the RStudio `Environment`, which lists all of the objects that are currently loaded. You can use the lower right pane to toggle between the `Files` and directories on your computer, to view `Plots` you have made and to use the `Help` features to search for documentation on many of the functionalities within R.
 
-To start programming, type R code into the bottom line of the RStudio console pane and then hit `Enter` to run it. The code you type is called a command, because it will command your computer to do something for you. The line you type it into is called the command line. When you type a command at the prompt and hit `Enter`, your computer executes the command and shows you the results. Then RStudio displays a fresh prompt for your next command. 
+To start programming, type R code into the bottom line of the RStudio console pane and then hit `Enter` to run it. The code you type is called a **command**, because it will command your computer to do something for you. The line you type it into is called the command line. When you type a command at the prompt and hit `Enter`, your computer executes the command and shows you the results. Then RStudio displays a fresh prompt for your next command. 
 
 
 #### Hello World
 
-For those of you new to programming, the first thing we traditionally do when we begin using a new language is learn how to print "Hello World" to the screen. In R, we will use the `print()` function and we will pass it the string "Hello World!". 
+For those of you new to programming, the first thing we traditionally do when we begin using a new language is learn how to print "Hello World" to the screen. In R, we can use the `print()` function and we will pass it the string "Hello World!". 
 
 ```{r}
 print("Hello World!")
@@ -220,7 +220,9 @@ my_matrix2
 class(my_matrix2)
 ```
 
-To access an element in your matrix, use square brackets to indicate the row(s) and column(s) that you are interested in. If you leave the row or column subsetting space blank, then R will automatically return all the rows or columns in the matrix. If you only use one number to subset a 2-dimensional matrix, it will return the $n^th$ element of the matrix, by column. Subsetting a matrix this was would be considered bad programming practice because it's unnecessarily confusing. 
+Note that the `class()` function tells us that our variable is primarily of the class `matrix` and secondarily of the class `array`. This means that if this object is passed to a function that has a different procedure for operating on a `matrix` vs. an `array`, it will follow the procedure for a `matrix`. If the function only has a procedure for operating on an `array`, then this function will bypass the `matrix` class for the object and operate on the object as though it were an `array`. 
+
+To access an element in your matrix, use square brackets to indicate the row(s) and column(s) that you are interested in. If you leave the row or column subsetting space blank, then R will automatically return all the rows or columns in the matrix. If you only use one number to subset a 2-dimensional matrix, it will return the $n^th$ element of the matrix, by column. Subsetting a matrix this way would be considered bad programming practice because it's unnecessarily confusing. 
 
 ```{r}
 my_matrix1[2,1] # Get element in 2nd row, 1st column
@@ -241,7 +243,7 @@ class(my_array)  # the class or data structure is an "array"
 typeof(my_array) # the array is filled with data of the type "integer"
 ```
 
-Again, you use square brackets to access or subset elements in your multi-dimensional array. You should specify the element position(s) you want in every dimension of the array. So if you have a 3-D array, you will subset with code like this: `my_3d_array[row(s), column(s), sheet(s)]`. Technically, you can just subset with a single number and it will returns the $n^th$ element of the array first going through the columns, then rows, then sheets, but this is unnecessarily confusing. If you attempt to subset a 3-D array with 2 numbers, an error will be thrown. 
+Again, you use square brackets to access or subset elements in your multi-dimensional array. You should specify the element position(s) you want in every dimension of the array. So if you have a 3-D array, you will subset with code like this: `my_3d_array[row(s), column(s), sheet(s)]`. Technically, you can just subset with a single number and it will returns the $n^{th}$ element of the array first going through the columns, then rows, then sheets, but this is unnecessarily confusing. If you attempt to subset a 3-D array with 2 numbers, an error will be thrown. 
 
 ```{r}
 my_array[3,2,1] # Best practice
@@ -261,7 +263,7 @@ my_list = list(95:103, "R", list(TRUE, FALSE))
 class(my_list)
 ```
 
-The double-bracketed indexes tell you which element of the list is being displayed. The single-bracket indexes tell you which subelement of an element is being displayed. For example, 97 is the first subelement of the first element in the list. "R" is the first sub-element of the second element. This two-system notation arises because each element of a list can be any R object, including a new vector (or list) with its own indexes.
+The double-bracketed indexes tell you which element of the list is being displayed. The single-bracket indexes tell you which subelement of an element is being displayed. For example, 97 is the first sub-element of the first element in the list. "R" is the first sub-element of the second element. This two-system notation arises because each element of a list can be any R object, including a new vector (or list) with its own indexes.
 
 ```{r}
 my_list[[1]][3]
@@ -274,7 +276,7 @@ Lists are a basic type of object in R, on par with atomic vectors. Like atomic v
 
 Data frames are the two-dimensional version of a list. They are far and away the most useful storage structure for data analysis. You can think of a data frame as R’s equivalent to the Excel spreadsheet because it stores data in a similar format. Data frames group vectors together into a two-dimensional table. Each vector becomes a column in the table. As a result, each column of a data frame can contain a different type of data; but within a column, every cell must be the same type of data.
 
-Creating a data frame by hand takes a lot of typing, but you can do it with the `data.frame` function. Give `data.frame` any number of vectors, where each vector has the same number of elements. Each vector should be set equal to a name that describes the vector. `data.frame` will turn each vector into a column of the new data frame. 
+Creating a data frame by hand takes a lot of typing, but you can do it with the `data.frame` function. Give `data.frame` any number of vectors, where each vector has the same number of elements. Each vector should be assigned a name that describes the vector. `data.frame` will turn each vector into a column of the new data frame. 
 
 ```{r}
 world_oceans = data.frame(oceans = c("Atlantic", "Pacific", "Indian", "Arctic", "Southern"),
@@ -301,9 +303,9 @@ Much of the work in this class will be learning to use R to read and write data 
 
 #### A note on naming objects
 
-Objects can be given any name such as x, current_temperature, or fish_id. You want your object names to be explicit and not too long. They cannot start with a number (2x is not valid, but x2 is). R is case sensitive (e.g., earth is different from Earth). There are some names that cannot be used because they are reserved for fundamental functions in R (?Reserved lists these words). In general, even if it’s allowed, it’s best to not use other function names (e.g., c, T, mean, data, df, weights). If in doubt, check the help or use tab completion to see if the name is already in use.
+Objects can be given any name such as x, current_temperature, or fish_id. You want your object names to be explicit and not too long. They cannot start with a number (2x is not valid, but x2 is). R is case sensitive (e.g., earth is different from Earth). There are some names that cannot be used because they are reserved for fundamental functions in R (`?Reserved` lists these words). In general, even if it’s allowed, it’s best to not use other function names (e.g., `c`, `T`, `mean`, `data`, `df`, `weights`). If in doubt, check the help or use tab completion to see if the name is already in use.
 
-It’s also best to avoid periods (.) within a variable name as in my.dataset. Historically, there are many functions in R with periods in their name, but since periods have a special meaning in R, it’s better to not use them and instead use underscores (_).
+It’s also best to avoid periods (.) within a variable name as in my.dataset. In R periods often have a special meaning, such as to call a specific version of a function based on the class of the object passed in the parameters. So it’s better to not use them and instead use underscores (_).
 
 ### Exercise 1.2
 
@@ -335,7 +337,7 @@ You’re not the only person writing your own functions with R. Many scientists,
 * Make sure you are connected to the Internet.
 * Run install.packages("name_of_package") at the command line.
 
-That’s it. R will have your computer visit the website, download ggplot2, and install the package in your hard drive right where R looks for it. Alternatively, you can use the `Tools` menu at the top of RStudio and click `Install Packages`. We'll be using plenty of packages in this class, with special emphasis on the suite of packages in the `tidyverse` such as `ggplot2`. Once you have a package installed on your computer, you'll need to load it at the top of your script with the `library()` function. For example:
+That’s it. R will have your computer visit the website, download ggplot2, and install the package on your hard drive right where R looks for it. Alternatively, you can use the `Tools` menu at the top of RStudio and click `Install Packages`. We'll be using plenty of packages in this class, with special emphasis on the suite of packages in the `tidyverse` such as `ggplot2`. Once you have a package installed on your computer, you'll need to load it at the top of your script with the `library()` function. For example:
 
 ``` {r, eval=FALSE}
 install.packages('ggplot2')  # Only need to do this one time on a computer
@@ -388,7 +390,7 @@ However, you get an error because R doesn't know how to add up the characters "1
 R also offers functions to change from one type to another. For example, you can turn numbers into characters with:
 
 ```{r}
-my_kids_ages = c(1,5,7)
+my_kids_ages = c(3,7,9)
 class(my_kids_ages)
 ages_as_characters = as.character(my_kids_ages)
 class(ages_as_characters)
