--- a/3_GitHub.Rmd
+++ b/3_GitHub.Rmd
@@ -1,13 +1,13 @@
 ---
 title: "1.3 Git and GitHub"
-output: html_document
+output:
+  pdf_document: default
+  html_document: default
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(fig.width=6, fig.asp = 0.618, collapse=TRUE) 
 ```
-
-Erin WUZ HERE
 
 ### Unit 1: Getting Started
 #### Lesson 1: Introduction to Git and GitHub
@@ -114,16 +114,16 @@ In short:
 - Go to your GitHub profile page.
 - Click your profile photo in the upper-right corner of the page and click `Settings`. 
 - In the left side bar, click `Developer Settings`. 
-- In the left sidebar, click `Personal access tokens`. 
-- Click `generate a personal access token`. 
-- Add a note. This can be anything, but I write something like `PAT-2022-01-23`
+- In the left sidebar, click `Personal access tokens`, then click `Tokens (classic)`
+- Click `Generate new token (classic)`. 
+- Add a note. This can be anything, but I write something like `PAT-2023-01-23`
 - Set the Expiration period for this personal access token. I generated a token with no expiration date because I'm super lazy about cyber security. Once the expiration period has ended, you'll have to go through these steps to generate a new personal access token.
 - Select the scopes of permission for this personal access token. At least choose `repo` for this class.
 - Click `Generate Token`
 - Copy the personal access token that has been generated. You can email this to yourself, save it in a Word file on your computer, or put it anywhere that will be handy for your workflow. You will need to copy and paste this in the future to move your files onto GitHub!
 - Note that on your personal access token page on GitHub, you can revoke all tokens that you have generated if you are concerned that someone has gained access to your account.
 
-If you choose to generate a personal access token with an expiration date, you'll need to generate a new personal access token whenver your old token expires. When you have a new personal access token, you can set that token in RStudio using the library `gitcreds`. When you run the function `gitcreds_set()`, you will be given the option to replace your GitHub security credentials. Select this option (option 2) then paste in the new personal access token. All done!
+If you choose to generate a personal access token with an expiration date, you'll need to generate a new personal access token whenever your old token expires. When you have a new personal access token, you can set that token in RStudio using the library `gitcreds`. When you run the function `gitcreds_set()`, you will be given the option to replace your GitHub security credentials. Select this option (option 2) then paste in the new personal access token. All done!
 
 ```r
 install.packages("gitcreds") # Only do this once
@@ -256,7 +256,7 @@ Now that you can create your own repository (project) from scratch on GitHub, it
 
 Let's say you found some data/models/ etc. on GitHub that's part of a public repository owned by a person you don't know. That person has a public repo because they want people to have access to their model. It is useful to pull files from this existing repo into our own github profile. Then we can work with it in RStudio and send out our changes to our own copy of this repository on our own GitHub repository. 
 
-This is especially relevant for our class, because **I have created tutorials and code for each of the class modules and hosted them in repositories on GitHub:** <https://github.com/MSCI-758>
+This is especially relevant for our class, because **I have created tutorials and code for each of the class modules and hosted them in repositories on GitHub:** <https://github.com/MSCI-709>
 
 This type of work flow requires the following steps:
 
@@ -270,9 +270,9 @@ This is just like the process we just did with our Hello world repo, except that
 
 As you can imagine, people you don't know usually don't want you to be able to update their files without them knowing it. That's why you can't actually change a file in a "master branch" unless you've been added as a collaborator by the "owner". So instead of using and changing their original files, you need to `Fork` their repo first. This essentially makes a copy of all information in their repo, and stores it as your own.
 
-Go to the course GitHub page <https://github.com/MSCI-758> and Fork the first module `unit_1_getting_started` to your own GitHub profile:
+Go to the course GitHub page <https://github.com/MSCI-709> and Fork the first module `unit_1_getting_started` to your own GitHub profile:
 
--  Go to the course GitHub page <https://github.com/MSCI-758>
+-  Go to the course GitHub page <https://github.com/MSCI-709>
 -  Click on the `unit_1_getting_started` repo
 -  Press 'Fork' in the top right corner
 -  Now navigate back to your github account (if you click on your user picture in the top right,
@@ -309,7 +309,7 @@ Cloud storage and version control!
 
 ## Course Workflow
 
-Now that you are set up with GitHub and you have found our class GitHub repository: https://github.com/MSCI-758 you can follow the class coding tutorials very easily. Whenever we start a new unit, **you should fork the associated unit repo to your own GitHub profile and Clone it onto your local computer.** From there you have access to all of the files we use in the tutorial: data, scripts, figures, readings etc. During class, create your own `.R` or `.Rmd` file and type the code along with me, but save the file with your initials at the end of the file name. That way you know that it's the versions that YOU created while you were following along with the course. You can take your own notes / comments directly in your `.R` or `.Rmd` files and reference them later. You'll also have the original tutorials that I created for you to reference as well. Commit and push your changes back into your repo as you go.
+Now that you are set up with GitHub and you have found our class GitHub repository: https://github.com/MSCI-709 you can follow the class coding tutorials very easily. Whenever we start a new unit, **you should fork the associated unit repo to your own GitHub profile and Clone it onto your local computer.** From there you have access to all of the files we use in the tutorial: data, scripts, figures, readings etc. During class, create your own `.R` or `.Rmd` file and type the code along with me, but save the file with your initials at the end of the file name. That way you know that it's the versions that YOU created while you were following along with the course. You can take your own notes / comments directly in your `.R` or `.Rmd` files and reference them later. You'll also have the original tutorials that I created for you to reference as well. Commit and push your changes back into your repo as you go.
 
 When you are working, open up the `.Rmd` file associated with the lesson tutorial that we are working through that day. Also open a new `.Rmd` or `.R` file in the RStudio Project linked to that unit's repo on your computer to type the code we are writing along with the tutorial. You can toggle between the RStudio script that you are writing in RStudio and the typed-up tutorial that you knitted from the `.Rmd` file I created.
 
